--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-confirm-alert": "^2.8.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.1",
     "web-vitals": "^2.1.4"
