--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "jspdf": "^2.5.1",
+    "moment": "^2.29.3",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.0.3",
     "react": "^18.0.0",
@@ -13,9 +15,12 @@
     "react-confirm-alert": "^2.8.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-paginate": "^8.1.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.1",
+    "react-to-pdf": "0.0.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
