--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-admin": "^4.0.3",
     "react-confirm-alert": "^2.8.0",
     "react-dom": "^18.0.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
@@ -21,7 +22,9 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.1",
     "react-to-pdf": "0.0.14",
-    "web-vitals": "^2.1.4"
+    "to-excel": "^2.2.5",
+    "web-vitals": "^2.1.4",
+    "write-excel-file": "^1.3.17"
   },
   "scripts": {
     "start": "react-scripts start",
