--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
+    "react-moment": "^1.1.2",
     "react-paginate": "^8.1.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.1",
