--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "jspdf": "^2.5.1",
     "moment": "^2.29.3",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.0.3",
     "react": "^18.0.0",
     "react-admin": "^4.0.3",
+    "react-bootstrap": "^2.4.0",
     "react-confirm-alert": "^2.8.0",
     "react-dom": "^18.0.0",
     "react-html-table-to-excel": "^2.0.0",
@@ -23,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.1",
     "react-to-pdf": "0.0.14",
+    "react-toastify": "^9.0.2",
     "to-excel": "^2.2.5",
     "web-vitals": "^2.1.4",
     "write-excel-file": "^1.3.17"
